[package]
name = "action-cache"
version = "0.0.4"
edition = "2021"
publish = false
authors = ["romnn <contact@romnn.com>"]
description = "GitHub actions toolkit"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/action-cache"
homepage = "https://github.com/romnn/action-rs"
repository = "https://github.com/romnn/action-rs"
categories = []
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
]
exclude = []

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
