[package]
name = "action-core"
version = "0.0.1"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "GitHub actions toolkit"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/action-core"
homepage = "https://github.com/romnn/action-rs"
repository = "https://github.com/romnn/action-rs"
categories = []
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
]
exclude = []

[features]
default = []

derive = ["dep:action-derive"]
serde = ["dep:serde", "dep:serde_yaml"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

action-derive = { path = "../action-derive", optional = true }
serde = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
