[package]
name = "action-derive"
version = "0.0.5"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "GitHub actions toolkit"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/action-derive"
homepage = "https://github.com/romnn/action-rs"
repository = "https://github.com/romnn/action-rs"
categories = []
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
]
exclude = []

[lib]
proc-macro = true

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
# prettyplease = "0"
