[package]
name = "action-http-client"
version = "0.0.1"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "GitHub actions toolkit"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/action-http-client"
homepage = "https://github.com/romnn/action-rs"
repository = "https://github.com/romnn/action-rs"
categories = []
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
]
exclude = []

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
