[package]
name = "action-github"
readme = "../../README.md"
documentation = "https://docs.rs/action-github"
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
  "github",
]
publish = true

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[dependencies]
