[package]
name = "action-glob"
readme = "../../README.md"
documentation = "https://docs.rs/action-glob"
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
  "glob",
]
publish = true

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
