[package]
name = "action-http-client"
readme = "../../README.md"
documentation = "https://docs.rs/action-http-client"
keywords = [
  "actions",
  "ci-cd",
  "github",
  "toolkit",
  "http-client",
]
publish = true

version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
